chore: added database connection

--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,16 @@
   },
   "dependencies": {
     "dotenv": "^16.5.0",
-    "express": "^4.18.2"
+    "express": "^4.21.2",
+    "mongoose": "^8.14.3",
+    "multer": "^1.4.5-lts.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.4.2",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^20.17.47",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.3"
   }
 }
