--- a/server/package.json
+++ b/server/package.json
@@ -8,13 +8,18 @@
     "start": "node dist/main.js"
   },
   "dependencies": {
+    "compromise": "^14.14.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "formidable": "^3.5.4",
     "mongoose": "^8.14.3",
     "multer": "^1.4.5-lts.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.18",
+    "@types/express": "^4.17.22",
+    "@types/formidable": "^3.4.5",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.17.47",
     "ts-node": "^10.9.2",
